# flatten-zip

./: Cargo.toml  readme.md
src/: main.rs
